# rein-orchestrator

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
deploy/: rein-daemon.service
docs/: getting-started.md
examples/01-hello-world/: README.md  workflow.yaml
examples/01-hello-world/agents/specialists/: summarizer.md
examples/01-hello-world/agents/teams/: team-hello.yaml
examples/02-code-review/: README.md  workflow.yaml
examples/02-code-review/agents/specialists/: code-improver.md  code-reviewer.md
examples/02-code-review/agents/teams/: team-code-review.yaml
examples/03-research-team/: README.md  workflow.yaml
examples/03-research-team/agents/specialists/: market-analyst.md  synthesizer.md  tech-analyst.md  user-researcher.md
examples/03-research-team/agents/teams/: team-research.yaml
examples/04-deliberation/: README.md  workflow.yaml
examples/04-deliberation/agents/specialists/: analyst-practical.md  analyst-strategic.md  analyst-technical.md
examples/04-deliberation/agents/teams/: team-deliberation.yaml
examples/05-conditional/: README.md  workflow.yaml
examples/05-conditional/agents/specialists/: formatter.md  (+2 more)
examples/06-product-analysis/: README.md  workflow.yaml
examples/07-brainstorm/: README.md  workflow.yaml
examples/08-generic-deliberation/: README.md  workflow.yaml
examples/09-docs-architecture/: README.md  workflow.yaml
examples/10-creative-writing/: README.md  workflow.yaml
examples/10-creative-writing/logic/: enhance-draft.py  validate-revision.py  validate-themes.py
integrations/openclaw/: README.md  package.json
integrations/openclaw/src/: index.ts  rein-client.ts  tools.ts  types.ts
models/: __init__.py  validator.py  workflow.py
rein/: __init__.py  __main__.py  cli.py  config.py  daemon.py  log.py  logic.py  mcp_server.py  models.py  orchestrator.py  output.py  state.py  tasks.py  ui.py
rein/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py
schemas/: __init__.py  registry.json  team-v2.5.3.json  workflow-v2.6.0.json
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_daemon.py  test_input_validation.py  test_logic.py  test_mcp_server.py  test_models.py  test_orchestrator.py  test_output.py  test_providers.py  test_state.py  test_tasks.py
(+22 files in other folders)
